re PR fortran/20865 (statement function shall not be supplied as procedure argument)

PR fortran/20865
	* resolve.c (resolve_actual_arglist): Issue an error if a statement
	functions is used as actual argument.
	* gfortran.dg/pr20865.f90: New test.

From-SVN: r98918